# Agent-Influence-Broker

./: -- Agents  .env.  .env.template  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  EXTENSIONS-GUIDE.md  LICENSE  PUSH_TO_GITHUB.sh  README.md  agent_broker_status.json  api-tests.http  create-test-pr.sh  dashboard-premium.html  dashboard.html  debug.py  diagnose_app.py  fix_agent_system.py  fix_api_integration.py  fix_code_quality.py  fix_current_issues.py  fix_log_level_error.py  fix_security_models.py  pyproject.toml  pytest.ini  requirements.txt  run.py  setup_compatible.py  setup_dev.py  setup_github.sh  setup_phase1_foundation.py  setup_phase2_enhanced.py  setup_phase3_database.py  start.py  test-premium.html  test_app_import.py  test_complete_setup.py  test_enterprise.py  test_installation.py  test_setup.py  (+2 more)
.github/: branch-protection-setup.md  copilot-instructions.md  pull_request_template.md
.github/workflows/: ci.yml  main.yml  pull-request.yml  test.yml
app/: __init__.py  main.py
app/api/: __init__.py
app/api/v1/: __init__.py  api.py  influence.py  negotiations.py  router.py  transactions.py  webhooks.py
app/api/v1/endpoints/: agents.py  external_agents.py  negotiations.py  transactions.py
app/core/: __init__.py  auth.py  config.py  database.py  exceptions.py  logging.py  security.py
app/database/: migrations.py  supabase.py
app/models/: __init__.py  agent.py  negotiation.py  transaction.py  user.py
app/schemas/: __init__.py  agent.py  external_agents.py  influence.py  negotiation.py  transaction.py  webhook.py
app/services/: __init__.py  agent_service.py  external_discovery_service.py  fastapi  influence_service.py  negotiation_service.py  transaction_service.py  webhook_service.py
app/services/platform_connectors/: __init__.py  base_connector.py  finance_connector.py  shopping_connector.py  smart_home_connector.py  travel_connector.py
deployment/: Dockerfile  docker-compose.yml
requirements/: base.txt  dev.txt  prod.txt
src/app/: __init__.py  data_store.py  fastapi_lite.py  main.py  main_clean.py  main_full.py  main_simple.py  simple_server.py  supabase_service.py
src/app/api/v1/: agents.py  negotiations.py  transactions.py  webhooks.py
src/app/core/: config.py  database.py  exceptions.py  security.py
src/app/models/: agents.py  negotiations.py  transactions.py
src/app/schemas/: agents.py  agents_dataclass.py  negotiations.py  negotiations_dataclass.py
src/app/services/: agent_service.py
src/tests/: conftest.py  test_agents.py  test_api.py  test_supabase.py  test_supabase_live.py
tests/: conftest.py  test_edge_cases.py  test_integration.py  test_performance.py  test_supabase.py
thunder-tests/: thunderEnvironment.json  thunderclient.json
